--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
   <div class="carousel">
-  <img class="carousel-img"src="img/jed1.jpg"/>
-  <img class="carousel-img"src="img/Jed2.jpg"/>
-  <img class="carousel-img"src="img/Jed3.jpg"/>
-  <img class="carousel-img"src="img/Jed4.jpg"/>
-  <img class="carousel-img"src="img/Jed5.jpg"/>
+  <img class="carousel-img"src="jed1.jpg"/>
+  <img class="carousel-img"src="Jed2.jpg"/>
+  <img class="carousel-img"src="Jed3.jpg"/>
+  <img class="carousel-img"src="Jed4.jpg"/>
+  <img class="carousel-img"src="Jed5.jpg"/>
   </div>
 </body>
 </html>
+
 
