--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <body>
   <div class="carousel">
   <img class="carousel-img"src="jed1.jpg"/>
-  <img class="carousel-img"src="Jed2.jpg"/>
-  <img class="carousel-img"src="Jed3.jpg"/>
-  <img class="carousel-img"src="Jed4.jpg"/>
-  <img class="carousel-img"src="Jed5.jpg"/>
+  <img class="carousel-img"src="jed2.jpg"/>
+  <img class="carousel-img"src="jed3.jpg"/>
+  <img class="carousel-img"src="jed4.jpg"/>
+  <img class="carousel-img"src="jed5.jpg"/>
   </div>
 </body>
 </html>
+
 
 
