--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
-<!DOCTYPE html>
+<! DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Galerie 3D</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="carousel">
-  <img class="carousel-img"src="Jed1.jpg"/>
-  <img class="carousel-img"src="Jed2.jpg"/>
-  <img class="carousel-img"src="Jed3.jpg"/>
-  <img class="carousel-img"src="Jed4.jpg"/>
-  <img class="carousel-img"src="Jed5.jpg"/>
-  </div>
-</body>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+‹title>Galerie 3D</title>
+<link rel="stylesheet"
+href="style.css" /> </head>
+‹body>
+‹div class="carousel-
+container">
+<div class="circle-carousel">
+<img src="Jed1.jpg"
+alt="Image 1">
+<img src="Jed2.jpg"
+alt="Image 2">
+<img src="Jed3.jpg"
+alt="Image 3">
+<img src="Jed4.jpg"
+alt="Image 4">
+<img src="Jed5.jpg"
+alt="Image 5">
+</div>
+</div>
+</ body> 
 </html>
+
 
 
 
