--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-‹title>Galerie 3D</title>
+<title>Galerie 3D</title>
 <link rel="stylesheet"
-href="style.css" /> </head>
-‹body>
-‹div class="carousel-
+href="style.css" />
+</head>
+<body>
+<div class="carousel-
 container">
 <div class="circle-carousel">
 <img src="Jed1.jpg"
@@ -22,8 +23,9 @@ alt="Image 4">
 alt="Image 5">
 </div>
 </div>
-</ body> 
+</body> 
 </html>
+
 
 
 
